--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,29 @@
 			<version>1.2.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv</artifactId>
+			<version>2.4.9-0.9</version>
+			<classifier>windows-x86</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv</artifactId>
+			<version>2.4.9-0.9</version>
+			<classifier>windows-x86_64</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv</artifactId>
+			<version>2.4.9-0.9</version>
+			<classifier>macosx-x86_64</classifier>
+		</dependency>
+		<dependency>
+			<groupId>net.lightbody.bmp</groupId>
+			<artifactId>browsermob-core-littleproxy</artifactId>
+			<version>2.1.0-beta-3</version>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<version>1.1.2</version>
@@ -59,7 +82,7 @@
 				<version>2.8.1</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>src\test\resources\suite.xml</suiteXmlFile>
+						<suiteXmlFile>src/test/resources/testSuite.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
